# MultiBand_ImSim

./: .gitignore  .gitmodules  README.md
alphaRecalPlus/: QC_run.sh  QC_step1.py  QC_step2.py  README.md  step1_methodC.py  step1_run.sh  step2_methodD.py  step2_run.sh
biasEstimation/: README.md  bias_estimate_func.py  bias_estimate_script.py  bias_estimate_script_dataRewei.py  run_m_ZB.sh  run_m_ZB_dataRewei.sh
biasEstimation/results/: m_weiRaw_K1000_LF_321_skills_v07D7p1_kidsPhotometry.csv  m_weiRaw_K1000_LF_321_skills_v07D7p1_kidsPhotometry_bin0.csv  m_weiRaw_K1000_LF_321_skills_v07D7p1_kidsPhotometry_bin0_bin1.npy  m_weiRaw_K1000_LF_321_skills_v07D7p1_kidsPhotometry_bin1.csv  (+19 more)
biasEstimationWithSurfaceOfDoom/: A_estimate_m_in_ZB_SNR_R_bins.py  B1_blending_fraction.py  B2_dm_inBlendingSample.py  B3_dm_PSFmodelling.py  B4_apply_dm.py  C_run_m_from_doom_tomo.py  README.md  m_from_doom_func.py
change_filters/: A_transfer_mag_gaap.py  B_transfer_mag_auto.py  README.md  transfer_TAGZ_REFzr_SDSS2VISTA.csv  transfer_TAGg_REFgr_SDSS2VST.csv  transfer_TAGi_REFir_SDSS2VST.csv  transfer_TAGr_REFrg_SDSS2VST.csv  transfer_TAGu_REFur_SDSS2VST.csv
config/: coadd_aw.swarp  coadd_theli.swarp  kids_aw_dr4_example_config.sex  kids_sims.sex  metadetect_config.json  resampling.swarp  resampling_aw.swarp  sex_image.param
correction_varShear_PSFmodelling/: AZ_combine_ori_extra.py  A_blending_fraction_2D.py  A_combine_selec.py  A_combine_selec_withNeighInfo.py  B_blending_fraction_2D.py  B_dm_inBlendingSample_2D.py  C_apply_dm_varShear_2D.py  C_dm_inBlendingSample_2D.py  D_apply_dm_varShear_2D.py  D_dm_PSFmodelling.py  E_apply_dm_PSFmodelling.py  README.md
external_src/: README.md
external_src/lensfit_svn_309c/: INSTALL  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
external_src/lensfit_svn_309c/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
external_src/lensfit_svn_309c/docs/: lensfit.aux  lensfit.bbl  lensfit.blg  lensfit.dvi  lensfit.tex  lensfit.tex.bak  lensfit.toc  lensing.bib  refs.tex  w1m1p2_grey.ps  w1m1p2_sticks.ps  w1m1p2_strehl.ps
external_src/lensfit_svn_309c/input_files/: CFHTLenS_prior_parameters  G3_prior_values  example_galaxy_input_catalogue  example_input_list
external_src/lensfit_svn_309c/nr/: Makefile.am  Makefile.in  dpythag.c  dsvbksb.c  dsvdcmp.c  nrutil.c  nrutil.h
external_src/lensfit_svn_309c/python/: apply2dtheta.py
external_src/lensfit_svn_309c/src/: #makeglobalpsf.c#  #psfmoments.c#  Makefile.am  Makefile.in  convolvemodel.c  createPSFcube.c  extractpostagestamp.c  flensfit.c  flensfit.c~  flensfit_nobias_correction.c  getcoeffs_fits_expand.c  getglobalcoeffs.c  getglobalpsfsize.c  getglobalpsfsizes.c  getimagesize.c  getospsfsizes.c  getpsfsize.c  globalreconstruct.c  globalshifts.c  globalshifts.c~  globalsvdfit.c  isoweight.for  lensutil.h  makeglobalpsf.c  makeglobalpsf.c~  makeospsf.c  mediansub.c  psfellipticitycentroid.c  psfmoments.c  readgalcatsize.c  readlensfits.c  readoscoeffs.c  readpsfcat.c  readpsfcat_simple_wcs.c  readpsfcatsize.c  reconstruct.c  remakeospsf.c  shiftft.c  svdfit2dsqc.c  swarpextract.c  (+17 more)
external_src/lensfit_svn_309c/swarp/: Makefile.am  Makefile.in  back.c  coadd.c  field.c  fitswcs.c  header.c  interpolate.c  prefs.c  weight.c
external_src/lensfit_svn_309c/swarp/fits/: Makefile.in  fitsbody.c  fitscat.c  fitscat.h  fitscheck.c  fitscleanup.c  fitsconv.c  fitshead.c  fitskey.c  fitsmisc.c  fitsread.c  fitstab.c  fitsutil.c  fitswrite.c
external_src/lensfit_svn_309c/swarp/wcs/: Makefile.in  cel.c  lin.c  poly.c  proj.c  sph.c  tnx.c  wcs.c  wcstrig.c
external_src/lensfit_svn_309c/utils/: psf_meimage2coeffs  psf_meimage2coeffs.c  psfimage2coeffs  psfimage2coeffs.c
modules/: Astromatic.py  BPZ.py  CrossMatch.py  GAaP.py  HSM.py  ImSim.py  ImSimKiDS.py  ImSimNoiseBackground.py  ImSimObject.py  ImSimPSF.py  ImSimSkyKiDS.py  ImSimSkySimple.py  LensFit.py  LoadCata.py  MetaDetect.py  PSFmodelling.py  Run.py  RunConfigFile.py  ShearBias.py  SphericalSky.py  __init__.py
noise_info/: Euclid_Q1_median_LSST10yr.csv  Euclid_Q1_median_LSST10yr_repeated50.csv  Moffat_KiDSnine_median_noNoise.csv  README.md  college_13psf_rms1703.csv  college_13psf_rms1703_plus9.csv  error_from_psf2moffat.csv  example_AiryPSF.csv  kids_dr4_dmag_ugri.csv  kids_dr4_effective_pixels.csv  kids_dr4_noise_median.csv  kids_dr4_noise_ugriZYJHKs.csv
paper_plots/: Fig1_Sec2_photo_in_SKiLLS_COSMOS.py  Fig3_Sec2_shape_in_SKiLLS_COSMOS_1D.py  Fig4_Sec2_shape_in_SKiLLS_COSMOS_2D.py  Fig5_Sec2_stellar_density.py  Fig6_Sec3_weight_image.py  Fig7_Sec3_tile_selected.py  Fig8_Sec3_noise_comp_r.py  Fig9_Sec3_noise_comp_others.py  Figg10_Sec3_GAaP_limiting.py  Figg11_Sec3_GAaP_photometry.py  Figg12_Sec3_bpz_performance.py  Figg13_Sec4_alphaS_2Dmap.py  Figg14_Sec4_alpha12_2Dmap.py  Figg15_Sec4_LFout.py  Figg16_Sec5_bias.py  Figg17_Sec5_Zshear.py  Figg18_Sec5_dmZtrue.py  Figg19_Sec5_dm_var.py  Figgg20_Sec5_m_blending.py  Figgg21_Sec5_dm_PSFmodelling.py  Figgg22_Sec6_dm_internal.py  Figgg23_Sec6_dm_galaxy.py  Figggg_A1_AppA_massFunction.py  Figggg_A2_AppA_mass_to_light_ratio.py  Figggg_A3_AppA_deltaMcorr.py  Figggg_B1_AppB_filters.py  Figggg_B2_AppB_magDiff.py  Figggg_B3_AppB_ZBcomp_whole.py  Figggg_D1_AppD_Rcut.py  Figggg_E1_AppE_CS.py  README.md
post_processing/: README.md
scripts/: README.md  example.ini  example_AiryPSF_VIS.ini  example_Euclid_LSST.ini  example_college.ini  example_nine_bands.ini  example_run_AiryPSF.sh  example_run_Euclid_LSST.sh  example_run_simple.sh  example_run_skills.sh  example_running.sh  example_running_college.sh  example_simple_bandr.ini  example_single_band.ini  example_single_band.sh  example_single_band_grid.ini  example_skills_bandr.ini
utils/: combine_SimCata.py  example_mc_estimate.py  feather2fits.py  lensfit_global_reweighting.py  mc_CalFunc.py  mc_estimate.py  mc_estimate_least_squares.py  mc_estimate_simple.py  phase1_forImSim.py  recalibrate_LFweights_rotated_to_psf_frame_forImSim.py
utils_metadetect/: A_assign_weights.py  B_calculate_R_and_bias_whole.py  README.md
(+254 files in other folders)
