AM_CFLAGS = -O3
AM_LDFLAGS = -O3

noinst_LIBRARIES = libswarp.a
libswarp_a_SOURCES = back.c \
	coadd.c \
	field.c \
	fitswcs.c \
	header.c \
	interpolate.c \
	prefs.c \
	weight.c

noinst_HEADERS = back.h coadd.h data.h define.h field.h fitswcs.h \
	globals.h header.h interpolate.h key.h preflist.h prefs.h \
	projapprox.h resample.h types.h wcscelsys.h weight.h xml.h

